--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   intl: ^0.19.0
   http: ^1.2.2
   
+  # WebView (주소 검색용) ⭐ NEW!
+  webview_flutter: ^4.4.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
