--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+ 
+  flutter_localizations:
+    sdk: flutter
+ 
   # Firebase 핵심
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.3
@@ -30,7 +33,7 @@ dependencies:
   permission_handler: ^11.3.1
   
   # 유틸리티
-  intl: ^0.19.0
+  intl: ^0.20.2
   http: ^1.2.2
   
   # WebView (주소 검색용) ⭐ NEW!
